objects/EUR_CRM_Contract_Tracker_Line_Item__c.object
<CustomObject>
    <description>Initially for GB Phase 2</description>
    <fields>
        <fullName>EUR_CRM_Contract_Tracker__c</fullName>
        <label>Contract Tracker (EU)</label>
        <referenceTo>EUR_CRM_Contract_Tracker__c</referenceTo>
        <relationshipLabel>Contract Tracker Line Items (EU)</relationshipLabel>
        <relationshipName>Contract_Tracker_Line_Items_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contracted_Volume_9L__c</fullName>
        <label>Estimated Volume (9L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Estimated_Volumes_lt__c</fullName>
        <label>Estimated volume (lt)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_Id__c</fullName>
        <description>Tech field to avoid duplicates</description>
        <label>Mobile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gin</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Anis</fullName>
                </value>
                <value>
                    <fullName>Aperitif Wines</fullName>
                </value>
                <value>
                    <fullName>Bitters</fullName>
                </value>
                <value>
                    <fullName>Brandy</fullName>
                </value>
                <value>
                    <fullName>Liquors</fullName>
                </value>
                <value>
                    <fullName>Other Spirit</fullName>
                </value>
                <value>
                    <fullName>Rum</fullName>
                </value>
                <value>
                    <fullName>Sparkling Wines</fullName>
                </value>
                <value>
                    <fullName>Still Wines</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Whisky</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Tracker Line Item (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EUR_DE_Contract_Tracker_Item</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Contract_Tracker__c</columns>
        <columns>EUR_CRM_Product_Category__c</columns>
        <columns>EUR_CRM_Estimated_Volumes_lt__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Tracker_Line_Item__c.EUR_DE_Contract_Tracker_Line_Item</value>
        </filters>
        <label>EUR DE Contract Tracker Item</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Contract_Tracker_Item</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Contracted_Volume_9L__c</columns>
        <columns>EUR_CRM_Contract_Tracker__c</columns>
        <columns>EUR_CRM_Estimated_Volumes_lt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Tracker_Line_Item__c.EUR_GB_Contract_Tracker_Line_Item</value>
        </filters>
        <label>EUR GB Contract Tracker Item</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Contract_Tracker_Item</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Contracted_Volume_9L__c</columns>
        <columns>EUR_CRM_Contract_Tracker__c</columns>
        <columns>EUR_CRM_Estimated_Volumes_lt__c</columns>
        <columns>EUR_CRM_Product_Category__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Tracker_Line_Item__c.EUR_RU_Contract_Tracker_Line_Item</value>
        </filters>
        <label>EUR RU Contract Tracker Item</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CTLI-{0000000000}</displayFormat>
        <label>Contract Tracker Line Item (EU) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Tracker Line Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AT_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR AT Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR BE Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR CH Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_ContractTracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR DB ContractTracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR DE Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Competitor_Contract_Tracker_Item</fullName>
        <active>true</active>
        <label>EUR DK Competitor Contract Tracker Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_PR_Contract_Tracker_item</fullName>
        <active>true</active>
        <label>EUR DK PR Contract Tracker item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR GB Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_IDL_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR IDL Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_IT_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR IT Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_Competitor_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR NL Competitor Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR RU Contract Tracker Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>